--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,6 +35,18 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok-maven-plugin</artifactId>
+    		<version>1.18.16.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
